welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
	if (isSummer){
		return (temp<=100 && temp>=60)
	} else {
		return (temps<=90 && temp>=60)
	}
}
